--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -1,6 +1,37 @@
 header {
     background: $black;
-    height: 95px;
-    display: flex;
-    color: $white;
+    
+
+    .icon {
+        height: 95px;
+        display: $flex;
+        flex-direction: $column;
+        color: $icon-text;
+        width: 1200px;
+        margin: 0 auto;
+    }
+    ul {
+        display: $flex;
+        justify-content: $end;
+        padding: 15px;
+    }
+    li {
+        list-style: none;
+        margin-left: 7px;
+        &:hover{
+            color: white;
+            cursor: pointer;
+            text-decoration: underline;
+            }
+    }
+       
+    span {
+        font-size: 12px;
+    }
+
+    .fas {
+        color: #009cff;
+        font-size: 15px;
+        margin-left: 7px;
+    }
 }
