--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -14,7 +14,6 @@ header {
             padding: 15px;
         }
         li {
-            list-style: none;
             margin-left: 7px;
             &:hover{
                 color: $white;
@@ -45,13 +44,17 @@ header {
         }
 
         li {
-            list-style: none;
             padding: 20px 25px;
             font-size: 15px;
 
             img {
                 width: 85%;
             }
+
+            &:hover{
+                color: $icon-text;
+                cursor: pointer;
+                }
         }
     }
 }
@@ -60,4 +63,41 @@ header {
     background-image: url('../../images/hero.jpg');
     height: 450px;
     background-position: top;
+
+    .container {
+        width: 1200px;
+        margin: 0 auto;
+        display: $flex;
+        justify-content: $end;
+
+        .left {
+            color: $white;
+            line-height: 45px;
+            margin-top: 25px;
+
+            i {
+                color: $icon-text;
+            }
+        }
+        
+        .right {
+            width: 400px;
+            height: 435px;
+            background: $black;
+            opacity: 0.9;
+            margin-top: 15px;
+            margin-left: 70px;
+            color: $white;
+            display: $flex;
+            justify-content: space-between;
+
+            .money {
+                padding: 20px;
+            }
+
+            .days {
+                padding: 15px;
+            }
+        }
+    }
 }
