--- a/src/scss/partials/_common.scss
+++ b/src/scss/partials/_common.scss
@@ -8,6 +8,11 @@ body {
     font-family: 'Noto Sans JP', sans-serif;
 }
 
+.container {
+    width: 1200px;
+    margin: 0 auto;
+}
+
 li {
     list-style: none;
 }
