--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -52,7 +52,8 @@ header {
             }
 
             &:hover{
-                color: $icon-text;
+                background: $white;
+                color: $black;
                 cursor: pointer;
                 }
         }
@@ -65,8 +66,6 @@ header {
     background-position: top;
 
     .container {
-        width: 1200px;
-        margin: 0 auto;
         display: $flex;
         justify-content: $end;
 
