--- a/src/scss/partials/_main.scss
+++ b/src/scss/partials/_main.scss
@@ -16,13 +16,54 @@
                 border-bottom: 2px solid $black;
             }
         }
+    }   
+
+}
+
+
+.intro {
+    background-image: url('../../images/intro.jpg');
+    height: 850px;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    text-align: center;
+
+    .text {
+        color: $white;
+        padding-top: 60px;
+        h2 {
+            font-size: 40px;
+        }
+        p {
+            margin-top: 20px;
+        }
+        .quick-start {
+          display: $flex;
+          justify-content: center;
+          margin-top: 20px;
+
+          img {
+              width: 3%;
+              margin-right: 15px;
+              margin-top: 10px;
+          }
+
+        }
+               
     }
 
-    .intro {
-        background: red;
-        height: 50px;
+    .cover {
+        width: 1000px;
+        height: 570px;
+        margin-top: 50px;
     }
 
+    .cover-image {
+        z-index: 2;
+        width: 925px;
+        height: 535px;
+    }
     
 
 }
