add gallery section

--- a/src/scss/partials/_common.scss
+++ b/src/scss/partials/_common.scss
@@ -25,3 +25,15 @@ li {
     padding: 5px 20px 7px;
     cursor: pointer;
 }
+
+.main-container {
+    text-align: center;
+    padding-top: 60px;
+    h2 {
+        font-size: 40px;
+    }
+    p {
+        margin-top: 20px;
+    }
+    
+}
