add background image scroll

--- a/src/scss/partials/_common.scss
+++ b/src/scss/partials/_common.scss
@@ -37,3 +37,10 @@ li {
     }
     
 }
+
+.background-scroll {
+    height: 650px;
+    background-repeat: no-repeat;
+    background-position: center bottom;
+    background-attachment: fixed;
+}
