--- a/src/scss/partials/_common.scss
+++ b/src/scss/partials/_common.scss
@@ -44,3 +44,24 @@ li {
     background-position: center bottom;
     background-attachment: fixed;
 }
+
+.format-image {
+        margin: 65px 0;   
+}
+
+.format-text {
+    text-align: left;
+    line-height: 30px;
+    margin-top: 85px;
+    width: 400px;
+
+    h3 {
+        margin-bottom: 20px;
+        font-size: 30px;
+    }
+}
+
+.flex-center {
+    display: $flex;
+    justify-content: center;
+}
